  Bug#13233   select distinct char(column) fails with utf8 ctype_utf8.result, ctype_utf8.test:   Adding test case sql_yacc.yy:   Adding new syntax. item_strfunc.h:   Fixing wrong max_length calculation.   Also, adding CHAR(x USING charset),   for easier migrating from 4.1 to 5.0,   according to Monty's suggestion.

sql/item_strfunc.h:
  Bug#13233
  select distinct char(column) fails with utf8
  Also, adding CHAR(x USING charset),
  for easier migrating from 4.1 to 5.0.
sql/sql_yacc.yy:
  Adding new syntax.
mysql-test/t/ctype_utf8.test:
  Adding test case
mysql-test/r/ctype_utf8.result:
  Adding test case