sql/item_strfunc.h
@@ -444,12 +444,15 @@ public:
 class Item_func_char :public Item_str_func
 {
 public:
-  Item_func_char(List<Item> &list) :Item_str_func(list) {}
+  Item_func_char(List<Item> &list) :Item_str_func(list)
+  { collation.set(default_charset()); }
+  Item_func_char(List<Item> &list, CHARSET_INFO *cs) :Item_str_func(list)
+  { collation.set(cs); }
   String *val_str(String *);
   void fix_length_and_dec() 
   { 
-    collation.set(default_charset());
-    maybe_null=0; max_length=arg_count;
+    maybe_null=0;
+    max_length=arg_count * collation.collation->mbmaxlen;
   }
   const char *func_name() const { return "char"; }
 };
